--- a/index.html
+++ b/index.html
@@ -408,5 +408,336 @@
       </div>
     </div>
     <!--section4-->
+
+    <!--section5-->
+    <div class="section5">
+      <div class="max-width">
+        <div class="section5-container">
+          <h3>Subscribe to the most GoPro newsletter around</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+            ipsum unde distinctio beatae sed provident reprehenderit. Eligendi,
+            itaque?
+          </p>
+          <div class="sec5-typs">
+            <input
+              type="text"
+              class="sec5typ"
+              placeholder="Your email address"
+            />
+            <a class="sec5btn" href="#">Sign me up!</a>
+          </div>
+          <p class="sec5btm-btn">
+            <i
+              >By signing up, I agree to <span>GoPro's </span>terms &
+              conditions.</i
+            >
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--section5-->
+
+    <!--footer-->
+    <div class="footer">
+      <div class="max-width">
+        <div class="footer-container">
+
+<div class="mssgtab">
+  <i class="far fa-comments msgs"></i>
+</div>
+
+
+
+          <div class="footer-top">
+            <img
+              src="https://cdn.zeplin.io/5f85cec23396bc8808015f95/assets/7c3b6163-f9c8-4bc5-8946-3c5865fd4afe.png"
+              style="width: 61px; height: 41px"
+            />
+            <img
+              src="https://cdn.zeplin.io/5f85cec23396bc8808015f95/assets/29c8dd6a-0eeb-481b-a493-dcc332f04013.png"
+              style="width: 137px; height: 27px"
+            />
+            <img
+              src="https://cdn.zeplin.io/5f85cec23396bc8808015f95/assets/b4c9a9f7-f69e-4bb1-9e72-92fcb073b8bb.png"
+              style="width: 86px; height: 59px"
+            />
+            <img
+              src="https://cdn.zeplin.io/5f85cec23396bc8808015f95/assets/ee3fb3ea-f75f-44df-98ab-22f72b506417.png"
+              style="width: 149px; height: 25px"
+            />
+            <img
+              src="https://cdn.zeplin.io/5f85cec23396bc8808015f95/assets/16898eff-cf44-4bd0-8bee-572742b29594.png"
+              style="width: 79px; height: 77px"
+            />
+            <img
+              src="https://cdn.zeplin.io/5f85cec23396bc8808015f95/assets/29c8dd6a-0eeb-481b-a493-dcc332f04013.png"
+              style="width: 137px; height: 27px"
+            />
+          </div>
+
+          <div class="footer-bottom">
+            <div class="footer-left">
+              <div class="footer-box">
+                <div class="footerbox-container">
+                  <img
+                    class="logo logofooter"
+                    src="https://cdn.zeplin.io/5f85cec23396bc8808015f95/assets/60fb21ec-b1ac-43b6-8ba5-eed5b9c4cf99.png"
+                  />
+                  <p class="pt1">
+                    Keep calm and get a special discount for all orders over $50
+                    from the Mountains Coffe.
+                  </p>
+
+                  <h4 class="pt2">Hurry up! Only 3 days left.</h4>
+
+                  <h5 class="pt3">Join our community</h5>
+                  <div class="toplbl">
+                    <input
+                      type="text"
+                      class="fillbx"
+                      placeholder="Your email"
+                    />
+                    <i class="far fa-paper-plane sent"></i>
+                  </div>
+
+                  <div class="undrlabl">
+                    <input checked type="checkbox" />
+                    <i>agree to GoPro's Terms & Conditions.</i>
+                  </div>
+                  <h3 class="pt4">Contact us</h3>
+
+                  <p class="btmps">
+                    <i class="fas fa-map-marker-alt marker"></i>Collins Street,
+                    Victoria 8007, Australia.
+                  </p>
+                  <p class="btmps">
+                    <i class="fas fa-phone-square-alt square"></i>+56 345 678
+                    000-09
+                  </p>
+                  <p class="btmps lstbtmps">
+                    <i class="far fa-envelope envolpe"></i>info@example.com
+                  </p>
+
+                  <div class="footer-socials">
+                    <i class="fab fa-instagram fs1"></i>
+                    <i class="fab fa-facebook-f fs2"></i>
+                    <i class="fab fa-google-plus-g fs3"></i>
+                    <i class="fab fa-twitter fs4"></i>
+                  </div>
+
+                  <div class="footerbox-line"></div>
+
+                  <h5 class="btm-footer-line">
+                    © 2020 <span>GoPro. </span> Design by
+                    <span class="line-second"> tophive</span>
+                  </h5>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer-right">
+              <div class="footer-links">
+                <div class="link1">
+                  <div class="link-item1">
+                    <h3>Most popular destinations</h3>
+                    <ul>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>London</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Canada</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Los
+                          Angeles</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i
+                          >Amsterdam</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="link-item1">
+                    <h3>Most searched experinces</h3>
+                    <ul>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>London</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Canada</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Los
+                          Angeles</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i
+                          >Amsterdam</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="link1">
+                  <div class="link-item1">
+                    <h3>Company</h3>
+                    <ul>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>London</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Canada</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Los
+                          Angeles</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i
+                          >Amsterdam</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="link-item1">
+                    <h3>Media partner</h3>
+                    <ul>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>London</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Canada</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Los
+                          Angeles</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i
+                          >Amsterdam</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="link1">
+                  <div class="link-item1">
+                    <h3>Help & support</h3>
+                    <ul>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>London</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Canada</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Los
+                          Angeles</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i
+                          >Amsterdam</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="link-item1">
+                    <h3>Discover</h3>
+                    <ul>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>London</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Canada</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i>Los
+                          Angeles</a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><i class="fas fa-chevron-right flinkR"></i
+                          >Amsterdam</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  
+                </div>
+              </div>
+              <div class="footerbox-line"></div>
+
+   <div class="flbottom">
+<div class="gffgdfdggfd">
+  <div class="flbottomlinkslft">
+   <ul>
+      <li>
+        <a href="#"> Privacy</a>
+      </li>
+      <li>
+        <a href="#"> Terms</a>
+      </li>
+      <li>
+        <a href="#"> Cookie Policy</a>
+      </li>
+      <li>
+        <a href="#"> Sitemap</a>
+      </li>
+    </ul>
+  </div>
+  <div class="flbottomlinksRght">
+   <a class="flbottombtn" href="#">English <i class="fas fa-sort-down dwnrn"></i></a>
+   <a class="flbottombtn flbottombtnL" href="#">USD - $ <i class="fas fa-sort-down dwnrn"></i></a>
+   </div>
+</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--footer-->
   </body>
 </html>
